fixed profile picture strech on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -118,6 +118,11 @@ main{
 /*
  Profile page
 */
+#profile .profile-picture{
+  max-width: 100%;
+  max-height: 100%;
+}
+
 #profile .collection {
   border-bottom:none;
   border-left:none;
@@ -153,7 +158,7 @@ footer{
 }
 
 .header{
-  margin: 10px;
+  margin: 10px 0;
 }
 
 .box{
@@ -361,6 +366,14 @@ section:nth-child(odd) div:nth-last-child(2n+2){
   /*.intro .valign-wrapper{
     display: block;
   }*/
+
+  #profile .profile-picture {
+    width: 300px;
+    margin: auto;
+  }
+  #profile .profile-picture img{
+    border-radius: 100%;
+  }
 }
 
 /*@media screen and (max-width: 768px){
